--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.0.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
